# Atlas-perception-in-gazebo

./: readme.md  readme.txt
scripts/: readme.txt
scripts/YOLO_ws/src/yolov3_atlas_ros/: README.md
scripts/YOLO_ws/src/yolov3_atlas_ros/ros_rs_msgs/: CMakeLists.txt
scripts/YOLO_ws/src/yolov3_atlas_ros/yolo_atlas_ros/: CMakeLists.txt  README.md  nodelet_description.xml  package.xml
scripts/YOLO_ws/src/yolov3_atlas_ros/yolo_atlas_ros/launch/: openloris.launch  prometheus.launch  realsense.launch  yolo_atlas.launch  yolo_atlas_nodelet.launch  yolo_test.launch
scripts/YOLO_ws/src/yolov3_atlas_ros/yolo_atlas_ros/src/: acl_ros_yolox.py  acl_ros_yolox_raw.py  acl_yolox.py  main_ros.cpp  main_ros_compressedImg.cpp  main_yolox.py  model_process.cpp  object_detect_nms_ros.cpp  yolo_atlas_nodelet.cpp
scripts/communication/: readme.txt
scripts/control/: control_uav_flying.py  readme.txt
scripts/launch/: easy_grasp.world  iris_realsense_empty.launch
src/ros_rs_msgs/: CMakeLists.txt  package.xml
src/ros_rs_msgs/msg/: DetectionMessages.msg
